# claymore

./: .gitignore  CMakeLists.txt  README.md  local_build.sh  setup_cpp.cmake  setup_cuda.cmake  setup_externallibs.cmake
Projects/DAM/: CMakeLists.txt  dam.cu  gmpm_simulator.cuh  settings.h
Projects/DEBRIS/: CMakeLists.txt  constitutive_models.cuh  debris.cu  fem_buffer.cuh  mgmpm_kernels.cuh  mgsp_benchmark.cuh  particle_buffer.cuh  settings.h  utility_funcs.hpp
Projects/DSA/: CMakeLists.txt  dsa.cu  fem_buffer.cuh  halo_buffer.cuh  mgmpm_kernels.cuh  mgsp_benchmark.cuh  read_scene_input.h  scene.json  scene_DSA.json  scene_FLOW_08032023.json  settings.h
Projects/DSI/: CMakeLists.txt  dsi.cu  mgmpm_kernels.cuh  mgsp_benchmark.cuh  scene.json  settings.h
Projects/DYN/: CMakeLists.txt  dyn.cu  gmpm_simulator.cuh  mgmpm_kernels.cuh  particle_buffer.cuh  scene.json  settings.h
Projects/FBAR/: CMakeLists.txt  constitutive_models.cuh  fbar.cu  fem_buffer.cuh  grid_buffer.cuh  halo_buffer.cuh  halo_kernels.cuh  hash_table.cuh  mgmpm_kernels.cuh  mgsp_benchmark.cuh  particle_buffer.cuh  read_scene_input.h  scene copy.json  scene-OSU_LWF-ls6.json  scene.json  scene_DFI_06082023.json  scene_DRUCKER_14012023.json  scene_FLAP.json  scene_FLAP_14012023.json  scene_FLOOD_CAR_02022023.json  scene_FLOW_08032023.json  scene_FLOW_3GPU_08032023.json  scene_HSI_06032023.json  scene_HSI_14012023.json  scene_OSU_Breaking_2D_19012023.json  scene_OSU_Breaking_3D_12022023.json  scene_OSU_Breaking_3D_22012023.json  scene_OSU_Breaking_3D_3GPU_12022023.json  scene_OSU_Breaking_3D_3GPU_16032023.json  scene_OSU_Breaking_3D_3GPU_RESUME_09032023.json  scene_OSU_Breaking_3D_6GPU_12022023.json  scene_OSU_Breaking_Piston_20012023.json  scene_OSU_TWB_3GPU_130323023.json  scene_OSU_TWB_ckpt_3GPU_130323023.json  scene_OSU_Unbreaking_3D_3GPU_16032023.json  scene_OSU_Unbreaking_3D_3GPU_RESUME_16032023.json  scene_OSU_Unbroken_14012023.json  scene_PUSH_27082023.json  scene_Professors_27012022.json  scene_SAND_14012023.json  (+7 more)
Projects/FBI/: CMakeLists.txt  fbi.cu  fem_buffer.cuh  mgmpm_kernels.cuh  mgsp_benchmark.cuh  scene.json  settings.h
Projects/FLAP/: CMakeLists.txt  fem_buffer.cuh  flap.cu  mgmpm_kernels.cuh  mgsp_benchmark.cuh  particle_buffer.cuh  scene.json  settings.h
Projects/FLAP_Nikki/: CMakeLists.txt  mgmpm_kernels.cuh  scene.json  settings.h
Projects/FSI/: CMakeLists.txt  fem_buffer.cuh  fsi.cu  halo_kernels.cuh  mgmpm_kernels.cuh  mgsp_benchmark.cuh  scene.json  settings.h
Projects/GMPM/: scene.json  settings.h
Projects/HSI/: CMakeLists.txt  fem_buffer.cuh  hsi.cu  mgmpm_kernels.cuh  mgsp_benchmark.cuh  particle_buffer.cuh  scene.json  settings.h
Projects/IMP/: CMakeLists.txt  gmpm_simulator.cuh  grid_buffer.cuh  imp  imp.cu  mgmpm_kernels.cuh  scene.json  settings.h  wasirf
Projects/IMP/.svn/: wc.db
Projects/MULTI/: CMakeLists.txt  fem_buffer.cuh  grid_buffer.cuh  halo_buffer.cuh  hash_table.cuh  mgmpm_kernels.cuh  mgsp  mgsp_benchmark.cuh  multi  multi.cu  particle_buffer.cuh  settings.h
Projects/OSU/: CMakeLists.txt  gmpm_simulator.cuh  grid_buffer.cuh  mgmpm_kernels.cuh  osu.cu  particle_buffer.cuh  scene.json  settings.h
Projects/OSU_LWF/: CMakeLists.txt  boundary_condition.cuh  grid_buffer.cuh  mgmpm_kernels.cuh  mgsp_benchmark.cuh  read_scene_input.h  scene.json  scene_AVE_2025.04.21.json  scene_HSI_2025.04.21.json  scene_OSU-LWF_Mascarenas2022_BreakingWave_2D_1GPU_2024.10.23.json  settings.h  utility_funcs.hpp
Projects/OSU_MGSP/: CMakeLists.txt  mgsp_benchmark.cuh  osu_mgsp  osu_mgsp.cu  particle_buffer.cuh  settings.h
Projects/OSU_TACC/: CMakeLists.txt  mgmpm_kernels.cuh  mgsp_benchmark.cuh  osu_tacc.cu  particle_buffer.cuh  scene.json  settings.h
Projects/OSU_new/: CMakeLists.txt  filters.cuh  gmpm_simulator.cuh  grid_buffer.cuh  mgmpm_kernels.cuh  osu_new  osu_new.cu  particle_buffer.cuh  scene.json  settings.h
Projects/WASIRF/: CMakeLists.txt  constitutive_models.cuh  gmpm_simulator.cuh  grid_buffer.cuh  mgmpm_kernels.cuh  particle_buffer.cuh  scene.json  settings.h  wasirf  wasirf.cu
Projects/WASIRF_FEM/: CMakeLists.txt  constitutive_models.cuh  fem_buffer.cuh  mgmpm_kernels.cuh  mgsp_benchmark.cuh  particle_buffer.cuh  scene.json  settings.h  wasirf_fem.cu
Projects/WASIRF_MULTI/: CMakeLists.txt  mgmpm_kernels.cuh  mgsp_benchmark.cuh  particle_buffer.cuh  settings.h  wasirf_multi.cu
Projects/WASIRF_old/: CMakeLists.txt  constitutive_models.cuh  grid_buffer.cuh  scene.json  utility_funcs.hpp  wasirf  wasirf_old
Projects/WEDGE/: CMakeLists.txt  grid_buffer.cuh  mgmpm_kernels.cuh  particle_buffer.cuh  scene.json  settings.h  wedge.cu
